<resources>
    <string name="app_name">3003</string>
    <string name="ads">ads</string>
    <string name="image">image</string>
    <string name="button1">Активные счета</string>
    <string name="button2">Пассивные счета</string>
    <string name="button3">Транзитные счета</string>
    <string name="button4">Забалансовые счета</string>
    <string name="button5">Законы</string>
    <string name="button6">Дополнително</string>
    <string name="activeSegment1">Долгосрочные активы</string>
    <string name="activeSegment2">Текущие активы</string>
    <string name="passiveSegment1">Текущие обязательства</string>
    <string name="passiveSegment2">Собственный капитал</string>
    <string name="a0100">0100 СЧЕТА УЧЕТА ОСНОВНЫХ СРЕДСТВ</string>
    <string name="a0110">0110 Земля</string>
    <string name="a0111">0111 Благоустройство земли</string>
    <string name="a0112">0112 Благоустройство основных средств, полученных по договору финансовой аренды</string>
    <string name="a0120">0120 Здания, сооружения и передаточные устройства</string>
    <string name="a0130">0130 Машины и оборудование</string>
    <string name="a0140">0140 Мебель и офисное оборудование</string>
    <string name="a0150">0150 Компьютерное оборудование и вычислительная техника</string>
    <string name="a0160">0160 Транспортные средства</string>
    <string name="a0170">0170 Рабочий и продуктивный скот</string>
    <string name="a0180">0180 Многолетние насаждения</string>
    <string name="a0190">0190 Прочие основные средства</string>
    <string name="a0199">0199 Законсервированные основные средства</string>
    <string name="a0200">0200 СЧЕТА УЧЕТА ИЗНОСА ОСНОВНЫХ СРЕДСТВ</string>
    <string name="a0211">0211 Износ благоустройства земли</string>
    <string name="a0212">0212 Износ благоустройства основных средств, полученных по договору финансовой аренды</string>
    <string name="a0220">0220 Износ зданий, сооружений и передаточных устройств</string>
    <string name="a0230">0230 Износ машин и оборудования</string>
    <string name="a0240">0240 Износ мебели и офисного оборудования</string>
    <string name="a0250">0250 Износ компьютерного оборудования и вычислительной техники</string>
    <string name="a0260">0260 Износ транспортных средств</string>
    <string name="a0270">0270 Износ рабочего скота</string>
    <string name="a0280">0280 Износ многолетних насаждений</string>
    <string name="a0290">0290 Износ прочих основных средств</string>
    <string name="a0299">0299 Износ основных средств, полученных по договору финансовой аренды</string>
    <string name="a0300">0300 СЧЕТА УЧЕТА ОСНОВНЫХ СРЕДСТВ, ПОЛУЧЕННЫХ ПО ДОГОВОРУ ФИНАНСОВОЙ АРЕНДЫ</string>
    <string name="a0310">0310 Основные средства, полученные по договору финансовой аренды</string>
    <string name="a0400">0400 СЧЕТА УЧЕТА НЕМАТЕРИАЛЬНЫХ АКТИВОВ</string>
    <string name="a0410">0410 Патенты, лицензии и ноу-хау</string>
    <string name="a0420">0420 Торговые марки, товарные знаки и промышленные образцы</string>
    <string name="a0430">0430 Программное обеспечение</string>
    <string name="a0440">0440 Права пользования землей и природными ресурсами</string>
    <string name="a0460">0460 Франчайз</string>
    <string name="a0470">0470 Авторские права</string>
    <string name="a0480">0480 Гудвилл</string>
    <string name="a0490">0490 Прочие нематериальные активы</string>
    <string name="a0500">0500 СЧЕТА УЧЕТА АМОРТИЗАЦИИ НЕМАТЕРИАЛЬНЫХ АКТИВОВ</string>
    <string name="a0510">0510 Амортизация патентов, лицензий и ноу-хау</string>
    <string name="a0520">0520 Амортизация торговых марок, товарных знаков и промышленных образцов</string>
    <string name="a0530">0530 Амортизация программного обеспечения</string>
    <string name="a0540">0540 Амортизация прав пользования землей и природными ресурсами</string>
    <string name="a0560">0560 Амортизация франчайза</string>
    <string name="a0570">0570 Амортизация авторских прав</string>
    <string name="a0590">0590 Амортизация прочих нематериальных активов</string>
    <string name="a0600">0600 СЧЕТА УЧЕТА ДОЛГОСРОЧНЫХ ИНВЕСТИЦИЙ</string>
    <string name="a0610">0610 Ценные бумаги</string>
    <string name="a0620">0620 Инвестиции в дочерние хозяйственные общества</string>
    <string name="a0630">0630 Инвестиции в зависимые хозяйственные общества</string>
    <string name="a0640">0640 Инвестиции в предприятие с иностранным капиталом</string>
    <string name="a0690">0690 Прочие долгосрочные инвестиции</string>
    <string name="a0700">0700 СЧЕТА УЧЕТА ОБОРУДОВАНИЯ К УСТАНОВКЕ</string>
    <string name="a0710">0710 Оборудование к установке — отечественное</string>
    <string name="a0720">0720 Оборудование к установке — импортное</string>
    <string name="a0800">0800 СЧЕТА УЧЕТА КАПИТАЛЬНЫХ ВЛОЖЕНИЙ</string>
    <string name="a0810">0810 Незавершенное строительство</string>
    <string name="a0820">0820 Приобретение основных средств</string>
    <string name="a0830">0830 Приобретение нематериальных активов</string>
    <string name="a0840">0840 Формирование основного стада</string>
    <string name="a0850">0850 Капитальные вложения в благоустройство земли</string>
    <string name="a0860">0860 Капитальные вложения в основные средства, полученные по договору финансовой аренды</string>
    <string name="a0890">0890 Прочие капитальные вложения</string>
    <string name="a0900">0900 СЧЕТА УЧЕТА ДОЛГОСРОЧНОЙ ДЕБИТОРСКОЙ ЗАДОЛЖЕННОСТИ И ОТСРОЧЕННЫХ РАСХОДОВ</string>
    <string name="a0910">0910 Векселя полученные</string>
    <string name="a0920">0920 Платежи к получению по финансовой аренде</string>
    <string name="a0930">0930 Долгосрочная задолженность персонала</string>
    <string name="a0940">0940 Прочая долгосрочная дебиторская задолженность</string>
    <string name="a0950">0950 Отсроченный налог на прибыль по временным разницам</string>
    <string name="a0960">0960 Долгосрочные отсроченные расходы по дисконтам (скидкам)</string>
    <string name="a0990">0990 Прочие долгосрочные отсроченные расходы</string>
    <string name="a1000">1000 СЧЕТА УЧЕТА МАТЕРИАЛОВ</string>
    <string name="a1010">1010 Сырье и материалы</string>
    <string name="a1020">1020 Покупные полуфабрикаты и комплектующие изделия</string>
    <string name="a1030">1030 Топливо</string>
    <string name="a1040">1040 Запасные части</string>
    <string name="a1050">1050 Строительные материалы</string>
    <string name="a1060">1060 Тара и тарные материалы</string>
    <string name="a1070">1070 Материалы, переданные в переработку на сторону</string>
    <string name="a1080">1080 Инвентарь и хозяйственные принадлежности</string>
    <string name="a1090">1090 Прочие материалы</string>
    <string name="a1100">1100 СЧЕТА УЧЕТА ЖИВОТНЫХ НА ВЫРАЩИВАНИИ И ОТКОРМЕ</string>
    <string name="a1110">1110 Животные на выращивании</string>
    <string name="a1120">1120 Животные на откорме</string>
    <string name="a1200">1200</string>
    <string name="a1300">1300</string>
    <string name="a1400">1400</string>
    <string name="a1500">1500 СЧЕТА УЧЕТА ЗАГОТОВЛЕНИЯ И ПРИОБРЕТЕНИЯ МАТЕРИАЛОВ</string>
    <string name="a1510">1510 Заготовление и приобретение материалов</string>
    <string name="a1600">1600 СЧЕТА УЧЕТА ОТКЛОНЕНИЙ В СТОИМОСТИ МАТЕРИАЛОВ</string>
    <string name="a1610">1610 Отклонения в стоимости материалов</string>
    <string name="a1700">1700</string>
    <string name="a1800">1800</string>
    <string name="a1900">1900</string>
    <string name="a2000">2000 СЧЕТА УЧЕТА ОСНОВНОГО ПРОИЗВОДСТВА</string>
    <string name="a2010">2010 Основное производство</string>
    <string name="a2100">2100 СЧЕТА УЧЕТА ПОЛУФАБРИКАТОВ СОБСТВЕННОГО ПРОИЗВОДСТВА</string>
    <string name="a2110">2110 Полуфабрикаты собственного производства</string>
    <string name="a2200">2200</string>
    <string name="a2300">2300 СЧЕТА УЧЕТА ВСПОМОГАТЕЛЬНЫХ ПРОИЗВОДСТВ</string>
    <string name="a2310">2310 Вспомогательное производство</string>
    <string name="a2400">2400</string>
    <string name="a2500">2500 СЧЕТА УЧЕТА ОБЩЕПРОИЗВОДСТВЕННЫХ РАСХОДОВ</string>
    <string name="a2510">2510 Общепроизводственные расходы</string>
    <string name="a2600">2600 СЧЕТА УЧЕТА БРАКА В ПРОИЗВОДСТВЕ</string>
    <string name="a2610">2610 Брак в производстве</string>
    <string name="a2700">2700 СЧЕТА УЧЕТА ОБСЛУЖИВАЮЩИХ ХОЗЯЙСТВ</string>
    <string name="a2710">2710 Обслуживающие хозяйства</string>
    <string name="a2800">2800 СЧЕТА УЧЕТА ГОТОВОЙ ПРОДУКЦИИ</string>
    <string name="a2810">2810 Готовая продукция на складе</string>
    <string name="a2820">2820 Готовая продукция на выставке</string>
    <string name="a2830">2830 Готовая продукция, переданная на комиссию</string>
    <string name="a2900">2900 СЧЕТА УЧЕТА ТОВАРОВ</string>
    <string name="a2910">2910 Товары на складах</string>
    <string name="a2920">2920 Товары в розничной торговле</string>
    <string name="a2930">2930 Товары на выставке</string>
    <string name="a2940">2940 Предметы проката</string>
    <string name="a2950">2950 Тара под товаром и порожняя</string>
    <string name="a2960">2960 Товары, переданные на комиссию</string>
    <string name="a2970">2970 Товары в пути</string>
    <string name="a2980">2980 Торговая наценка</string>
    <string name="a2990">2990 Прочие товары</string>
    <string name="a3000">3000</string>
    <string name="a3100">3100 СЧЕТА УЧЕТА РАСХОДОВ БУДУЩИХ ПЕРИОДОВ</string>
    <string name="a3110">3110 Предоплаченная оперативная аренда</string>
    <string name="a3120">3120 Предоплаченные услуги</string>
    <string name="a3130">3190 Прочие расходы будущих периодов</string>
    <string name="a3200">3200 СЧЕТА УЧЕТА ОТСРОЧЕННЫХ РАСХОДОВ</string>
    <string name="a3210">3210 Отсроченный налог на прибыль по временным разницам</string>
    <string name="a3220">3220 Отсроченные расходы по дисконтам (скидкам)</string>
    <string name="a3290">3290 Прочие отсроченные расходы</string>
    <string name="a3300">3300</string>
    <string name="a3400">3400</string>
    <string name="a3500">3500</string>
    <string name="a3600">3600</string>
    <string name="a3700">3700</string>
    <string name="a3800">3800</string>
    <string name="a3900">3900</string>
    <string name="a4000">4000 СЧЕТА К ПОЛУЧЕНИЮ</string>
    <string name="a4010">4010 Счета к получению от покупателей и заказчиков</string>
    <string name="a4020">4020 Векселя полученные</string>
    <string name="a4100">4100 СЧЕТА К ПОЛУЧЕНИЮ ОТ ОБОСОБЛЕННЫХ ПОДРАЗДЕЛЕНИЙ, ДОЧЕРНИХ И ЗАВИСИМЫХ ХОЗЯЙСТВЕННЫХ ОБЩЕСТВ</string>
    <string name="a4110">4110 Счета к получению от обособленных подразделений</string>
    <string name="a4120">4120 Счета к получению от дочерних и зависимых хозяйственных обществ</string>
    <string name="a4200">4200 СЧЕТА УЧЕТА АВАНСОВ, ВЫДАННЫХ ПЕРСОНАЛУ</string>
    <string name="a4210">4210 Авансы, выданные по оплате труда</string>
    <string name="a4220">4220 Авансы, выданные на служебные командировки</string>
    <string name="a4230">4230 Авансы, выданные на общехозяйственные расходы</string>
    <string name="a4290">4290 Прочие авансы, выданные персоналу</string>
    <string name="tilni_o_zgartirish">Tilni o\'zgartirish</string>
    <string name="bo_lishish">Bo\'lishish</string>
    <string name="bizni_baholang">Bizni baholang</string>
    <string name="night_mode" translatable="false">Tungi rejim</string>
    <string name="social" translatable="false">Bizni kuzatib boring:</string>
    <string name="app_version">App Name v1.1</string>
    <string name="website" translatable="false">www.dg.uz</string>
    <string name="company_name" translatable="false">Digital world</string>
    <string name="dastur_yaratuvchisi" translatable="false">Dastur yaratuvchisi:</string>
    <string name="debet">Debet</string>
    <string name="kredit">kredit</string>
    <string name="mazmuni">Xo\'jalik operatsiyasining mazmuni</string>
    <string name="schetlar">Bog\'lanuvchi schetlar</string>
    <string name="yth">Yozuvchilarni tasdiqlovchi hujjatlar</string>
</resources>