<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language"
        android:title="@string/tilni_o_zgartirish" />
    <item
        android:id="@+id/nav_night_mode"
        android:icon="@drawable/ic_about_us"
        android:title="@string/night_mode"
        android:actionLayout="@layout/drawer_menu"/>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/bo_lishish" />
    <item
        android:id="@+id/nav_grade"
        android:icon="@drawable/ic_grade"
        android:title="@string/bizni_baholang" />

</menu>