<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/dastur_yaratuvchisi"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/company_name"
        android:textColor="#000"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_telegram"
        app:layout_constraintBottom_toTopOf="@id/tv_web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:drawablePadding="8dp"
        android:text="@string/website"
        android:textColor="#000"
        app:drawableStartCompat="@drawable/ic_website"
        app:layout_constraintBottom_toTopOf="@id/tv_social"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/social"
        android:textColor="#000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_version">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/btn_telegram"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_weight="1.5"
            android:background="@null"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_telegram" />

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1.5"
            android:background="@null"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_facebook" />


        <ImageButton
            android:id="@+id/btn_instagram"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1.5"
            android:background="@null"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_instagram" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/app_version"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>